k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transit-chat
  namespace: transit-chat
spec:
  selector:
    app: transit-chat
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
